[gd_scene load_steps=9 format=4 uid="uid://m7eeverxv5hn"]

[ext_resource type="Script" path="res://scenes/main menu/main_menu.gd" id="1_s7te6"]
[ext_resource type="PackedScene" uid="uid://b0x01ew66hs6e" path="res://scenes/tilemaps/tiles.tscn" id="2_ttd0b"]
[ext_resource type="Texture2D" uid="uid://d1jxjuqiowdhj" path="res://assests/UI stuff/Buttons/Playbutton (1).png" id="2_x2s52"]
[ext_resource type="Texture2D" uid="uid://drrlkuqe5lb4l" path="res://assests/UI stuff/Buttons/Play_button_pressed.png" id="3_lb2fs"]
[ext_resource type="Texture2D" uid="uid://36g5ytiupemq" path="res://assests/UI stuff/Buttons/Options_button.png" id="4_x55ei"]
[ext_resource type="Texture2D" uid="uid://bf0ngenrwwd1o" path="res://assests/UI stuff/Buttons/Options_button_pressed.png" id="5_jd8p4"]
[ext_resource type="Texture2D" uid="uid://6gxnphk8wu0q" path="res://assests/UI stuff/Buttons/Quit_button.png" id="6_2xh6d"]
[ext_resource type="Texture2D" uid="uid://cjtywymf5him" path="res://assests/UI stuff/Buttons/Quit_button_pressed.png" id="7_h52n7"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_s7te6")
metadata/_edit_horizontal_guides_ = [393.0]

[node name="TileMapLayer" parent="." instance=ExtResource("2_ttd0b")]
tile_map_data = PackedByteArray("AAATABkAAAABAAEAAAAUABkAAAABAAEAAAAVABkAAAABAAEAAAAWABkAAAABAAEAAAAXABkAAAACAAEAAAAYABkAAAABAAEAAAAYABoAAAABAAEAAAAXABoAAAACAAEAAAAWABoAAAABAAEAAAAVABoAAAABAAEAAAAUABoAAAABAAEAAAATABoAAAABAAEAAAATABMAAAABAAIAAAAUABMAAAABAAIAAAAVABMAAAABAAIAAAAWABMAAAABAAIAAAAWABQAAAABAAEAAAAVABQAAAABAAEAAAAUABQAAAABAAEAAAATABQAAAABAAEAAAAUAA0AAAABAAEAAAAVAA0AAAABAAEAAAAWAA0AAAABAAEAAAAWAA4AAAABAAEAAAAWAA8AAAABAAEAAAAVAA8AAAABAAEAAAAVAA4AAAABAAEAAAAUAA4AAAABAAEAAAATAA0AAAABAAEAAAATAA4AAAABAAEAAAATAA8AAAABAAEAAAAUAA8AAAABAAEAAAAaAAwAAAABAAEAAAAaAA0AAAABAAEAAAAaAA4AAAABAAEAAAAaAA8AAAABAAEAAAAaABAAAAABAAEAAAAaABEAAAABAAEAAAAbABEAAAABAAEAAAAbABAAAAAAAAIAAAAbAA8AAAAAAAEAAAAbAA4AAAAAAAEAAAAbAA0AAAAAAAEAAAAbAAwAAAAAAAEAAAAlAAsAAAABAAEAAAAkAAsAAAABAAEAAAAkAAwAAAABAAAAAAAjAAwAAAABAAAAAAAjAA0AAAABAAEAAAAjAA4AAAABAAEAAAAiAA4AAAAAAAEAAAAiAA8AAAAAAAEAAAAhAA8AAAABAAEAAAAhABAAAAABAAEAAAAiABAAAAAAAAEAAAAjABAAAAABAAEAAAAjAA8AAAABAAEAAAAkAA8AAAABAAEAAAAkAA4AAAABAAEAAAAkAA0AAAABAAEAAAAlAA0AAAABAAEAAAAlAAwAAAABAAAAAAAmAAwAAAABAAAAAAAlAA4AAAABAAEAAAAiABEAAAAAAAEAAAAjABEAAAABAAEAAAAkABEAAAABAAEAAAAkABAAAAABAAEAAAAlAA8AAAABAAEAAAAmAA0AAAABAAEAAAAnAAwAAAACAAAAAAAmAA4AAAABAAEAAAAlABAAAAABAAEAAAARAAoAAAABAAEAAAARAAsAAAABAAEAAAARAAwAAAABAAEAAAARAA0AAAABAAEAAAARAA4AAAABAAEAAAARAA8AAAABAAEAAAARABAAAAABAAAAAAARABEAAAABAAEAAAARABIAAAABAAEAAAARABMAAAABAAEAAAARABQAAAABAAEAAAARABUAAAABAAEAAAARABYAAAABAAEAAAARABcAAAABAAEAAAARABgAAAABAAEAAAARABkAAAABAAEAAAARABoAAAABAAEAAAARABsAAAABAAEAAAASAAoAAAABAAEAAAASAAsAAAABAAEAAAASAAwAAAABAAEAAAASAA0AAAABAAEAAAASAA4AAAABAAEAAAASAA8AAAABAAEAAAASABAAAAABAAAAAAASABEAAAABAAEAAAASABIAAAABAAEAAAASABMAAAABAAEAAAASABQAAAABAAEAAAASABUAAAABAAEAAAASABYAAAABAAAAAAASABcAAAABAAEAAAASABgAAAABAAEAAAASABkAAAABAAEAAAASABoAAAABAAEAAAASABsAAAABAAEAAAATAAoAAAABAAEAAAATAAsAAAABAAEAAAATAAwAAAABAAEAAAATABAAAAABAAAAAAATABEAAAABAAEAAAATABIAAAABAAEAAAATABUAAAABAAEAAAATABYAAAABAAAAAAATABcAAAABAAEAAAATABgAAAABAAEAAAATABsAAAABAAEAAAAUAAoAAAABAAEAAAAUAAsAAAABAAEAAAAUAAwAAAABAAEAAAAUABAAAAABAAAAAAAUABEAAAABAAEAAAAUABIAAAABAAEAAAAUABUAAAABAAEAAAAUABcAAAABAAEAAAAUABgAAAABAAEAAAAUABsAAAABAAEAAAAVAAoAAAABAAEAAAAVAAsAAAABAAEAAAAVAAwAAAABAAEAAAAVABAAAAABAAAAAAAVABEAAAABAAEAAAAVABIAAAABAAEAAAAVABUAAAABAAEAAAAVABcAAAABAAEAAAAVABgAAAABAAEAAAAVABsAAAABAAEAAAAWAAoAAAABAAEAAAAWAAsAAAABAAEAAAAWAAwAAAABAAEAAAAWABAAAAABAAAAAAAWABEAAAABAAEAAAAWABIAAAABAAEAAAAWABUAAAABAAEAAAAWABYAAAABAAAAAAAWABcAAAABAAEAAAAWABgAAAABAAEAAAAWABsAAAABAAEAAAAXAAoAAAABAAEAAAAXAAsAAAABAAEAAAAXAAwAAAABAAEAAAAXAA0AAAABAAEAAAAXAA4AAAABAAEAAAAXAA8AAAABAAEAAAAXABAAAAABAAAAAAAXABEAAAABAAEAAAAXABIAAAABAAEAAAAXABMAAAABAAIAAAAXABQAAAABAAEAAAAXABUAAAABAAEAAAAXABYAAAACAAAAAAAXABcAAAACAAEAAAAXABgAAAACAAEAAAAXABsAAAACAAEAAAAYAAoAAAABAAEAAAAYAAsAAAABAAEAAAAYAAwAAAABAAEAAAAYAA0AAAABAAEAAAAYAA4AAAABAAEAAAAYAA8AAAABAAEAAAAYABAAAAABAAAAAAAYABEAAAABAAEAAAAYABIAAAABAAEAAAAYABMAAAABAAIAAAAYABQAAAABAAEAAAAYABUAAAABAAEAAAAYABYAAAABAAEAAAAYABcAAAABAAEAAAAYABgAAAABAAEAAAAYABsAAAABAAEAAAAZAAoAAAABAAEAAAAZAAsAAAABAAEAAAAZAAwAAAABAAEAAAAZAA0AAAABAAEAAAAZAA4AAAABAAEAAAAZAA8AAAABAAEAAAAZABAAAAACAAAAAAAZABEAAAACAAEAAAAZABIAAAACAAEAAAAZABMAAAACAAIAAAAZABQAAAABAAEAAAAZABUAAAABAAEAAAAZABYAAAABAAEAAAAZABcAAAAAAAAAAAAZABgAAAAAAAEAAAAZABkAAAAAAAIAAAAZABoAAAABAAEAAAAZABsAAAABAAEAAAAaAAoAAAABAAEAAAAaAAsAAAABAAEAAAAaABIAAAABAAEAAAAaABMAAAABAAEAAAAaABQAAAABAAEAAAAaABUAAAABAAEAAAAaABYAAAABAAEAAAAaABcAAAABAAAAAAAaABgAAAABAAEAAAAaABkAAAABAAIAAAAaABoAAAABAAEAAAAaABsAAAABAAEAAAAbAAoAAAABAAEAAAAbAAsAAAABAAEAAAAbABIAAAABAAEAAAAbABMAAAABAAEAAAAbABQAAAABAAEAAAAbABUAAAABAAEAAAAbABYAAAABAAEAAAAbABcAAAACAAAAAAAbABgAAAACAAEAAAAbABkAAAACAAIAAAAbABoAAAABAAEAAAAbABsAAAABAAEAAAAcAAoAAAABAAEAAAAcAAsAAAABAAEAAAAcAAwAAAABAAEAAAAcAA0AAAABAAEAAAAcAA4AAAABAAEAAAAcAA8AAAABAAEAAAAcABAAAAABAAIAAAAcABEAAAABAAEAAAAcABIAAAABAAEAAAAcABMAAAABAAEAAAAcABQAAAABAAEAAAAcABUAAAABAAEAAAAcABYAAAABAAEAAAAcABcAAAABAAEAAAAcABgAAAABAAEAAAAcABkAAAABAAEAAAAcABoAAAABAAEAAAAcABsAAAABAAEAAAAdAAoAAAABAAEAAAAdAAsAAAABAAEAAAAdAAwAAAABAAEAAAAdAA0AAAABAAEAAAAdAA4AAAABAAEAAAAdAA8AAAABAAEAAAAdABAAAAABAAIAAAAdABEAAAABAAEAAAAdABIAAAABAAEAAAAdABMAAAABAAEAAAAdABQAAAABAAEAAAAdABUAAAABAAEAAAAdABcAAAAAAAAAAAAdABgAAAAAAAEAAAAdABkAAAAAAAEAAAAdABoAAAAAAAEAAAAdABsAAAAAAAIAAAAeAAoAAAABAAEAAAAeAAsAAAABAAEAAAAeAAwAAAABAAEAAAAeAA0AAAABAAEAAAAeAA4AAAABAAEAAAAeAA8AAAABAAEAAAAeABAAAAABAAIAAAAeABEAAAABAAEAAAAeABIAAAABAAEAAAAeABMAAAABAAEAAAAeABQAAAABAAEAAAAeABUAAAABAAEAAAAeABYAAAABAAEAAAAeABcAAAACAAAAAAAeABgAAAACAAEAAAAeABkAAAACAAEAAAAeABoAAAACAAEAAAAeABsAAAACAAIAAAAfAAoAAAABAAEAAAAfAAsAAAACAAEAAAAfAAwAAAACAAEAAAAfAA0AAAACAAEAAAAfAA4AAAACAAEAAAAfAA8AAAACAAEAAAAfABAAAAACAAIAAAAfABEAAAABAAEAAAAfABIAAAABAAEAAAAfABMAAAABAAEAAAAfABQAAAABAAEAAAAfABUAAAABAAEAAAAfABYAAAABAAEAAAAfABcAAAABAAEAAAAfABgAAAABAAEAAAAfABkAAAABAAEAAAAfABoAAAABAAEAAAAfABsAAAABAAEAAAAgAAoAAAABAAEAAAAgAAsAAAABAAEAAAAgAAwAAAABAAEAAAAgAA0AAAABAAEAAAAgAA4AAAABAAEAAAAgAA8AAAABAAEAAAAgABAAAAABAAEAAAAgABEAAAABAAEAAAAgABIAAAABAAEAAAAgABMAAAABAAEAAAAgABQAAAABAAEAAAAgABYAAAAAAAAAAAAgABcAAAAAAAEAAAAgABgAAAAAAAEAAAAgABkAAAAAAAEAAAAgABoAAAAAAAEAAAAgABsAAAAAAAEAAAAhAAoAAAABAAEAAAAhAAsAAAABAAEAAAAhAAwAAAABAAEAAAAhAA0AAAABAAEAAAAhAA4AAAABAAEAAAAhABEAAAABAAEAAAAhABIAAAABAAEAAAAhABMAAAABAAEAAAAhABQAAAABAAEAAAAhABUAAAABAAEAAAAhABYAAAABAAAAAAAhABcAAAABAAEAAAAhABgAAAABAAEAAAAhABkAAAABAAEAAAAhABoAAAABAAEAAAAhABsAAAABAAEAAAAiAAoAAAABAAEAAAAiAAsAAAABAAEAAAAiAAwAAAAAAAAAAAAiAA0AAAAAAAEAAAAiABIAAAAAAAIAAAAiABMAAAABAAEAAAAiABQAAAABAAEAAAAiABUAAAABAAEAAAAiABYAAAABAAAAAAAiABcAAAABAAEAAAAiABgAAAABAAEAAAAiABkAAAABAAEAAAAiABoAAAABAAEAAAAiABsAAAABAAEAAAAjAAoAAAABAAEAAAAjAAsAAAABAAEAAAAjABIAAAABAAIAAAAjABMAAAABAAEAAAAjABQAAAABAAEAAAAjABUAAAABAAEAAAAjABYAAAABAAAAAAAjABcAAAABAAEAAAAjABgAAAABAAEAAAAjABkAAAABAAEAAAAjABoAAAABAAEAAAAjABsAAAABAAEAAAAkAAoAAAABAAEAAAAkABIAAAABAAIAAAAkABMAAAABAAEAAAAkABQAAAABAAEAAAAkABUAAAABAAEAAAAkABYAAAABAAAAAAAkABcAAAABAAEAAAAkABgAAAABAAEAAAAkABkAAAABAAEAAAAkABoAAAABAAEAAAAkABsAAAABAAEAAAAlAAoAAAABAAEAAAAlABEAAAABAAEAAAAlABIAAAABAAIAAAAlABMAAAABAAEAAAAlABQAAAABAAEAAAAlABUAAAABAAEAAAAlABYAAAABAAAAAAAlABcAAAABAAEAAAAlABgAAAABAAEAAAAlABkAAAABAAEAAAAlABoAAAABAAEAAAAlABsAAAABAAEAAAAmAAoAAAABAAEAAAAmAAsAAAABAAEAAAAmAA8AAAABAAEAAAAmABAAAAABAAEAAAAmABEAAAABAAEAAAAmABIAAAABAAIAAAAmABMAAAABAAEAAAAmABQAAAABAAEAAAAmABUAAAABAAEAAAAmABYAAAABAAAAAAAmABcAAAABAAEAAAAmABgAAAABAAEAAAAmABkAAAABAAEAAAAmABoAAAABAAEAAAAmABsAAAABAAEAAAAnAAoAAAABAAEAAAAnAAsAAAABAAEAAAAnAA0AAAACAAEAAAAnAA4AAAABAAEAAAAnAA8AAAABAAEAAAAnABAAAAABAAEAAAAnABEAAAACAAEAAAAnABIAAAACAAIAAAAnABMAAAABAAEAAAAnABQAAAABAAEAAAAnABUAAAABAAEAAAAnABYAAAABAAAAAAAnABcAAAABAAEAAAAnABgAAAABAAEAAAAnABkAAAABAAEAAAAnABoAAAABAAEAAAAnABsAAAABAAEAAAAoAAoAAAABAAEAAAAoAAsAAAABAAEAAAAoAAwAAAAAAAAAAAAoAA0AAAAAAAEAAAAoAA4AAAABAAEAAAAoAA8AAAABAAEAAAAoABAAAAABAAEAAAAoABEAAAABAAEAAAAoABIAAAABAAEAAAAoABMAAAABAAEAAAAoABQAAAABAAEAAAAoABUAAAABAAEAAAAoABYAAAABAAEAAAAoABcAAAABAAEAAAAoABgAAAABAAEAAAAoABkAAAABAAEAAAAoABoAAAABAAEAAAAoABsAAAABAAEAAAApAAoAAAABAAEAAAApAAsAAAABAAEAAAApAAwAAAABAAEAAAApAA0AAAABAAEAAAApAA4AAAABAAEAAAApAA8AAAABAAEAAAApABAAAAABAAEAAAApABEAAAABAAEAAAApABIAAAABAAEAAAApABMAAAABAAEAAAApABQAAAABAAEAAAApABUAAAABAAEAAAApABYAAAABAAEAAAApABcAAAABAAEAAAApABgAAAABAAEAAAApABkAAAABAAEAAAApABoAAAABAAEAAAApABsAAAABAAEAAAAqAAoAAAABAAEAAAAqAAsAAAABAAEAAAAqAAwAAAABAAEAAAAqAA0AAAABAAEAAAAqAA4AAAABAAEAAAAqAA8AAAABAAEAAAAqABAAAAABAAEAAAAqABEAAAABAAEAAAAqABIAAAABAAEAAAAqABMAAAABAAEAAAAqABQAAAABAAEAAAAqABUAAAABAAEAAAAqABYAAAABAAEAAAAqABcAAAABAAEAAAAqABgAAAABAAEAAAAqABkAAAABAAEAAAAqABoAAAABAAEAAAAqABsAAAABAAEAAAAUABYAAAABAAAAAAAVABYAAAABAAAAAAAQABAAAAABAAAAAAAgABwAAAAAAAEAAAAhABwAAAABAAEAAAAiABwAAAABAAEAAAAjABwAAAABAAEAAAAkABwAAAABAAEAAAAlABwAAAABAAEAAAAmABwAAAABAAEAAAAnABwAAAABAAEAAAAoABwAAAABAAEAAAAdABYAAAABAAEAAAAgABUAAAABAAEAAAA=")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(471, 317)
zoom = Vector2(3, 3)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -22.0
offset_right = 16.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_x2s52")
texture_pressed = ExtResource("3_lb2fs")

[node name="Options" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_x55ei")
texture_pressed = ExtResource("5_jd8p4")

[node name="Quit" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_2xh6d")
texture_pressed = ExtResource("7_h52n7")

[connection signal="pressed" from="Control/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
